--- a/.gitmodules
+++ b/.gitmodules
@@ -9,10 +9,10 @@
 	url = git@bitbucket.org:msl_elec/xprintf.git
 [submodule "lib/uart_dsPIC33F"]
 	path = lib/uart_dsPIC33F
-	url = https://tilt_silvie@bitbucket.org/msl_elec/uart_dspic33f.git
+	url = git@bitbucket.org:msl_elec/uart_dspic33f.git
 [submodule "lib/i2c"]
 	path = lib/i2c
 	url = git@bitbucket.org:msl_elec/i2cslavelibrary.git
 [submodule "lib/msgpack"]
 	path = lib/msgpack
-	url = git@bitbucket.org:tilt_silvie/msgpack-embedded-c.git
+	url = git@bitbucket.org:msl_elec/msgpack-embedded-c.git
